...
            break;
        }

        case kRowCalendars: {
            selector = @selector(rowTouchedCalendars);
            title = @"Calendar";
            identifier = @"calendar";
            break;
        }

        case kRowReminders: {
            selector = @selector(rowTouchedReminders);
            title = @"Reminders";
            identifier = @"reminders";
            break;
        }

        case kRowPhotos: {
            selector = @selector(rowTouchedPhotos);
            title = @"Photos";
...
            break;
        }

        case kHealthKit: {
            selector = @selector(rowTouchedHealthKit);
            title = @"Health Kit";
            identifier = @"health kit";
            break;
        }

        case kAPNS: {
            selector = @selector(rowTouchedApns);
            title = @"APNS";
...

- (void)viewWillAppear:(BOOL)animated {
    [super viewWillAppear:animated];
    [self setContentInsets:self.tableView];
    self.view.accessibilityIdentifier = @"page";
    self.tableView.accessibilityLabel = @"Permissions list";
    self.tableView.accessibilityIdentifier = @"table";
}

- (void)viewDidAppear:(BOOL)animated {
    [super viewDidAppear:animated];
}

...
