...

    UIAlertController *controller;
    controller = [UIAlertController alertControllerWithTitle:title
                                                     message:message
                                              preferredStyle:UIAlertControllerStyleAlert];

    [controller addAction:[UIAlertAction actionWithTitle:@"OK"
                                                   style:UIAlertActionStyleDefault
                                                 handler:handler]];

    [controller addAction:[UIAlertAction actionWithTitle:self.localizedDismiss
                                                   style:UIAlertActionStyleCancel
                                                 handler:handler]];
...
