...
                                <segments>
                                    <segment title="First"/>
                                    <segment title="Second"/>
                                    <segment title="Third"/>
                                </segments>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="segmented"/>
                                </userDefinedRuntimeAttributes>
                            </segmentedControl>
...
        <scene sceneID="qfw-v3-Wl9">
            <objects>
                <viewController id="fjY-r3-q7z" userLabel="Tao" customClass="TaoController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="wnv-uZ-HQl"/>
...
                                <rect key="frame" x="16" y="568" width="343" height="42"/>
                                <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="complex touches">
                                    <accessibilityTraits key="traits" none="YES"/>
                                </accessibility>
...
                                        </subviews>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="two finger double tap">
                                            <accessibilityTraits key="traits" button="YES"/>
                                            <bool key="isElement" value="YES"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Schreib!" textAlignment="center" minimumFontSize="10" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="gUN-3j-Tbv">
                                <rect key="frame" x="0.0" y="74" width="339" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="text field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="qQM-Dd-9B6"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L77-WD-uO0">
                                <rect key="frame" x="339" y="74" width="36" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear text field button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="WAC-yh-zEC"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJp-FR-igg" userLabel="Clear Text View Button">
                                <rect key="frame" x="339" y="122" width="36" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear text view button"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="36" id="AAo-hg-bBi"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3DB-XL-KGR" userLabel="Dismiss Text View Keyboard">
                                <rect key="frame" x="339" y="152" width="36" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="dismiss text view keyboard"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="iBu-Sp-46o"/>
...
                                <rect key="frame" x="0.0" y="523" width="375" height="36"/>
                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="question"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="qgp-kC-sE1"/>
...
                                <rect key="frame" x="0.0" y="122" width="339" height="80"/>
                                <color key="backgroundColor" red="0.69049358370000002" green="0.69049358370000002" blue="0.69049358370000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="text view"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="u7k-Sd-Ik0" userLabel="height = 120"/>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="text input row"/>
                                        <connections>
                                            <segue destination="xmh-5J-kwV" kind="show" id="4IW-3Y-35U"/>
...
                        </sections>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="misc page"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Misc Menu" id="jGb-51-NTs"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Jp-Zo-soh" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" title="DatePickers" id="4Nr-Ie-0rZ" userLabel="Misc"/>
                    <connections>
                        <outlet property="dateField" destination="OCN-uM-Acv" id="RTb-Ue-PMJ"/>
...
